--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="%%NAME%%">
         <meta name="description" content="%%DESCRIPTION%%">
-        <link rel="stylesheet" type="text/css" href="src/ui/web/css/main.css">
+        <link rel="stylesheet" type="text/css" href="src/css/main.css">
 	</head>
 	<body>
 		<script id="main" type="module">
